[package]
name = "taweb"
version = "0.1.0"
authors = ["Anton Rechenauer <antonrechenauer@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.0"
tera = "*"
diesel = { version = "1.0.0", features = ["postgres"] }
dotenv = "0.9.0"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["tera_templates"]
